kubernetes/apps/observability/victoria-metrics-k8s-stack/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmalertmanager
      app.kubernetes.io/instance: victoria-metrics
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: security
            k8s:io.kubernetes.serviceaccount.name: oauth2-proxy-alertmanager
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            k8s:app.kubernetes.io/name: vmalert
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            k8s:app: notification-controller
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: system-upgrade
      toPorts:
        - ports: [{ port: "9093", protocol: TCP }]
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - { port: "53", protocol: TCP }
            - { port: "53", protocol: UDP }
    - toFQDNs:
        - matchName: api.telegram.org
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
